# O2SpaceChargeCalc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
documentation/: doc.key
include/: O2TPCSpaceCharge3DCalc.h  RegularGrid3D.h  TriCubic.h  matrix.h
include/AliRoot/: AliTPCPoissonSolver.cxx  AliTPCPoissonSolver.h
src/: O2TPCSpaceCharge3DCalc.cxx
src/include/: DataContainer3D.h  O2TPCPoissonSolver.cxx  O2TPCPoissonSolver.h  O2TPCPoissonSolverStructs.h  O2TPCSpaceCharge3DCalc.h  RegularGrid3D.cxx  RegularGrid3D.h  SpaceChargeLinkDef.h  SpaceChargeStructs.h  TriCubic.h  Vector.h  matrix.h
src/include/AliRoot/: AliTPCPoissonSolver.cxx  AliTPCPoissonSolver.h
src/include/GeometricalTools/: NearestNeighborQuery.h
src/include/GeometricalTools/Mathematics/: Vector.h
src/include/O2/: Defs.h
src/macros/: CalculateDistortionsCorrections.C
